# Fusion

./: .gitignore  CMakeLists.txt  LICENSE.md  MANIFEST.in  README.md  idf_component.yml  library.json  library.properties  package.xml  pyproject.toml  setup.py
.github/workflows/: main.yml
AHRS-Sensor-Fusion-JS/: FusionAhrs.js  FusionBias.js  FusionCompass.js  FusionTypes.js
AHRS-Sensor-Fusion-JS/Compressed/: Fusion.min.js
Examples/: Sensor Data.csv
Examples/Advanced/: main.c
Examples/C/: CMakeLists.txt
Examples/C/Advanced/: CMakeLists.txt  main.c
Examples/C/Complete/: CMakeLists.txt  main.c
Examples/C/Minimal/: CMakeLists.txt  main.c
Examples/C/Simple/: CMakeLists.txt  main.c
Examples/Cpp/: CMakeLists.txt
Examples/CxxCompatibility/: CMakeLists.txt  main.c
Examples/Python/: advanced_example.py  compass_vs_ahrs.py  complete_example.py  hard_iron_test.py  minimal_example.py  simple_example.py  test_conversions.py  test_convert.py  test_hard_iron_solve.py  test_model.py  test_remap.py
Examples/Simple/: CMakeLists.txt  main.c
Fusion/: CMakeLists.txt  Fusion.h  FusionAhrs.c  FusionAhrs.h  FusionAxes.h  FusionBias.c  FusionBias.h  FusionCalibration.h  FusionCompass.c  FusionCompass.h  FusionConfig.cmake.in  FusionConvention.h  FusionHardIron.c  FusionHardIron.h  FusionMath.h  FusionModel.h  FusionOffset.c  FusionOffset.h  FusionProgress.c  FusionProgress.h  FusionRemap.h  FusionResult.c  FusionResult.h  FusionSwap.h  FusionTypes.h
Python/: advanced_example.py  generate_stub_file.py  generate_stubs.py  simple_example.py
Python/Python-C-API/: .gitignore  Ahrs.h  Axes.h  CMakeLists.txt  Compass.h  Flags.h  Helpers.h  InternalStates.h  Offset.h  Quaternion.h  Settings.h  imufusion.c  setup.py
Python/imufusion/: Ahrs.h  AhrsFlags.h  AhrsInternalStates.h  AhrsSettings.h  Axes.h  Bias.h  BiasSettings.h  CMakeLists.txt  Compass.h  Convention.h  Convert.h  Flags.h  HardIron.h  HardIronSettings.h  Helpers.h  InternalStates.h  Model.h  NpArray.h  Offset.h  Progress.h  Quaternion.h  Remap.h  Settings.h  Swap.h  imufusion.c
Python/imufusion-stubs/: __init__.pyi
cmake/: FusionConfig.cmake.in
